--- a/home.html
+++ b/home.html
@@ -2,52 +2,59 @@
 <html lang='pt-BR'>
 <head>
 	<meta charset='UTF-8'>
+	<title>Colher de Doce de Leite</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<link rel='stylesheet' href='css/estrutura.css'>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-<!-- <div class="container-fluid"> -->
-	<nav class="navbar navbar-expand-lg bg-chocolate">
-		<div class="container">
-			<!-- Brand -->
-			<h1 class="navbar-brand marca-colher brusher">colher de <br> doce deLeite </h1>
-			<!-- Toggler/collapsibe Button -->
-			<button class="navbar-toggler" id="btn-hamburguer" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-			<div class="hamburguer" onclick="myFunction(this)">
-				<div class="bar1"></div>
-				<div class="bar2"></div>
-				<div class="bar3"></div>
+	<header>
+		<nav class="navbar navbar-expand-lg bg-chocolate">
+			<div class="container">
+				<!-- Brand -->
+				<h1 class="navbar-brand marca-colher brusher">colher de <br> doce deLeite </h1>
+				<!-- Toggler/collapsibe Button -->
+				<button class="navbar-toggler" id="btn-hamburguer" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<div class="hamburguer" onclick="myFunction(this)">
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+				</div>
+				</button>
+				<div class="collapse navbar-collapse justify-content-end align-self-end" id="collapsibleNavbar">
+					<ul class="navbar-nav menuPrincipal">
+						<li class="nav-item">
+							<a class="nav-link" href='home.html'> Início </a> 
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown"> Nossos Produtos </a>
+								<div class="dropdown-menu bg-docedeleite">
+									<a class="dropdown-item" href='miniDoces.html'>MiniDoces</a>
+									<a class="dropdown-item" href='brownie.html'>Brownies</a>
+									<a class="dropdown-item" href='bolo.html'>Bolos & Tortas</a>
+								</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href='pacote.html'>Pacotes</a> 
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href='galeria.html'>Galeria de Fotos</a> 
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href='sobre.html'>Sobre </a> 
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href='contato.html'>Contato</a>
+						</li>
+					</ul>
+				</div>
 			</div>
-			</button>
-			<div class="collapse navbar-collapse justify-content-end align-self-end" id="collapsibleNavbar">
-				<ul class="navbar-nav menuPrincipal">
-					<li class="nav-item">
-						<a class="nav-link" href='home.html'> Início </a> 
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown"> Produtos </a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href='miniDoces.html'>MiniDoces</a>
-								<a class="dropdown-item" href='brownie.html'>Brownies</a>
-								<a class="dropdown-item" href='bolo.html'>Bolos & Tortas</a>
-							</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href='galeria.html'>Galeria</a> 
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href='sobre.html'>Sobre </a> 
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href='contato.html'>Contato</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-<!-- </div> -->
+		</nav>
+	<header>
 
+<!-- <a href="https://www.facebook.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-facebook'></i></a>
+<a href="https://www.instagram.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-instagram'></i></a> -->
 
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
