--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg bg-chocolate">
+		<nav class="navbar navbar-expand-lg fixed-top bg-chocolate">
 			<div class="container">
 				<!-- Brand -->
 				<h1 class="navbar-brand marca-colher brusher">colher de <br> doce deLeite </h1>
@@ -25,10 +25,10 @@
 				<div class="collapse navbar-collapse justify-content-end align-self-end" id="collapsibleNavbar">
 					<ul class="navbar-nav menuPrincipal">
 						<li class="nav-item">
-							<a class="nav-link" href='home.html'> Início </a> 
+							<a class="nav-link" href='home.html'>Início</a> 
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown"> Nossos Produtos </a>
+							<a class="nav-link dropdown-toggle" href="#sectionProdutos" id="navbardrop" data-toggle="dropdown">Nossos Produtos</a>
 								<div class="dropdown-menu bg-docedeleite">
 									<a class="dropdown-item" href='miniDoces.html'>MiniDoces</a>
 									<a class="dropdown-item" href='brownie.html'>Brownies</a>
@@ -36,13 +36,13 @@
 								</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='pacote.html'>Pacotes</a> 
+							<a class="nav-link" href='pacote.html'>Galeria de Fotos</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='galeria.html'>Galeria de Fotos</a> 
+							<a class="nav-link" href='galeria.html'>Eventos</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='sobre.html'>Sobre </a> 
+							<a class="nav-link" href='#sectionSobre'>Sobre</a> 
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href='contato.html'>Contato</a>
@@ -52,6 +52,43 @@
 			</div>
 		</nav>
 	<header>
+		<div id="carouselPaginaPrincipal" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+				<li data-target="#ccarouselPaginaPrincipal" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselPaginaPrincipal" data-slide-to="1"></li>
+				<li data-target="#carouselPaginaPrincipal" data-slide-to="2"></li>
+			  </ol>
+		  <div class="carousel-inner imagem-banner">
+			<div class="carousel-item img-fluid active">
+			  <img src="imagens/galeria/1.jpg" class="d-block w-100 alt="...">
+			</div>
+			<div class="carousel-item img-fluid">
+			  <img src="imagens/galeria/2.jpg" class="d-block w-100" alt="...">
+			</div>
+			<div class="carousel-item img-fluid">
+			  <img src="imagens/galeria/3.jpg" class="d-block w-100" alt="...">
+			</div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselPaginaPrincipal" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselPaginaPrincipal" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		  </a>
+		</div>
+	<div id="sectionProdutos" class="container" style="padding-top:70px;padding-bottom:70px">
+		<h1>Nossos Produtos</h1>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="sectionSobre" class="container" style="padding-top:70px;padding-bottom:70px">
+		<h1>Sobre</h1>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+
 
 <!-- <a href="https://www.facebook.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-facebook'></i></a>
 <a href="https://www.instagram.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-instagram'></i></a> -->
