--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 			</div>
 		</nav>
 	<header>
-		<div id="carouselPaginaPrincipal" class="carousel slide" data-ride="carousel">
+		<div id="carouselPaginaPrincipal" class="carousel slide " data-ride="carousel">
 			  <ol class="carousel-indicators">
 				<li data-target="#ccarouselPaginaPrincipal" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselPaginaPrincipal" data-slide-to="1"></li>
@@ -60,7 +60,7 @@
 			  </ol>
 		  <div class="carousel-inner imagem-banner">
 			<div class="carousel-item img-fluid active">
-			  <img src="imagens/galeria/1.jpg" class="d-block w-100 alt="...">
+			  <img src="imagens/galeria/1.jpg" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item img-fluid">
 			  <img src="imagens/galeria/2.jpg" class="d-block w-100" alt="...">
@@ -83,15 +83,135 @@
 		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
-	<div id="sectionSobre" class="container" style="padding-top:70px;padding-bottom:70px">
-		<h1>Sobre</h1>
-		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	<div id="sectionSobre" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
+		<h1> Do encontro de dois amigos, uma ideia: Doces caseiros feitos com afeto! </h1>
+		<div class="row">
+			<div class="col-md-6 text-center">
+				<figure class="figure">
+					<img src="imagens/luccasperfil.jpeg" class='foto_perfil img-fluid' alt='Foto do Luccas'>
+					<figcaption class="figure-caption">Luccas Trindade</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-6 text-center">
+				<figure class="figure">
+					<img src="imagens/dinho_perfil.jpeg" class='foto_perfil img-fluid' alt='Foto do Dinho'>
+					<figcaption class="figure-caption">Edson Netto</figcaption>
+				</figure>
+			</div>
+		</div>
 	</div>
 
+<!-- Footer -->
+<footer class="page-footer pt-4 bg-chocolate text-white">
+ <!-- Footer Links -->
+    <div class="container text-center">
+	<!-- Footer links -->
+      <div class="row text-center mt-3 pb-3">
+		<!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto text-center mt-3 text-white">
+          <h4 class="mb-4   brusher"> colher de <br> doce deLeite</h4>
+          <p>Doces Caseiros<br>Feitos com Afeto!</p>
+        </div>
+        <!-- Grid column -->
 
-<!-- <a href="https://www.facebook.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-facebook'></i></a>
-<a href="https://www.instagram.com/colherdedocedeleite/" target='_blanck'><i class='fab fa-instagram'></i></a> -->
+        <hr class="w-100 clearfix d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mt-3 align-items-center">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Nossos Produtos</h6>
+          <p>
+            <a href="miniDoces.html">MiniDoces</a>
+          </p>
+          <p>
+            <a href="brownie.html">Brownies</a>
+          </p>
+          <p>
+            <a href="bolo.html">Bolos & Tortas</a>
+          </p>
+        </div>
+       
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contato</h6>
+		  <p>
+            <i class="fas fa-phone mr-3"></i> (21) 99250-5551 (Edson)</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> (21) 96747-3484 (Luccas)</p>
+          <p>
+            <i class="fas fa-home mr-3"></i> Rio de Janeiro, RJ, Brasil</p>
+          <!-- <p>
+            <i class="fas fa-envelope mr-3"></i> colherdedocedeleite@gmail.com</p> -->
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Footer links -->
+
+      <hr>
+
+      <!-- Grid row -->
+      <div class="row d-flex align-items-center">
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-4">
+
+          <!--Copyright-->
+          <p class="text-center text-md-left">© 2019 Copyright:
+            <a href="home.html">
+              <strong> Colher de Doce de Leite</strong>
+            </a>
+          </p>
+
+        </div>
+        <!-- Grid column -->
+	
+
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-4 ml-lg-0">
+
+          <!-- Social buttons -->
+          <div class="text-center justify-content-center">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1" href="https://www.facebook.com/colherdedocedeleite/" target='_blanck'>
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="btn-floating btn-sm rgba-white-slight mx-1" href="https://www.instagram.com/colherdedocedeleite/" target='_blanck'>
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+        <!-- Grid column -->
+		
+		<!-- Grid column -->
+        <div class="col-md-3 col-lg-4 text-md-right">
+
+          <!--Copyright-->
+          <p class="text-center">Desenvolvido por:
+            <a href='https://www.linkedin.com/in/rodrigo-barbosa-da-silva/' target='_blanck'>
+              <strong> Shock!</strong>
+            </a>
+          </p>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+  </footer>
+  <!-- Footer -->
 
 <script src="js/jquery-3.3.1.slim.min.js"></script>
 <script src="js/popper.min.js"></script>
