--- a/home.html
+++ b/home.html
@@ -30,22 +30,22 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#sectionProdutos" id="navbardrop" data-toggle="dropdown">Nossos Produtos</a>
 								<div class="dropdown-menu bg-docedeleite">
-									<a class="dropdown-item" href='miniDoces.html'>MiniDoces</a>
-									<a class="dropdown-item" href='brownie.html'>Brownies</a>
-									<a class="dropdown-item" href='bolo.html'>Bolos & Tortas</a>
+									<a class="dropdown-item" href='#sectionMinidoces'>MiniDoces</a>
+									<a class="dropdown-item" href='#sectionBrownie'>Brownies</a>
+									<a class="dropdown-item" href='#sectionBolo'>Bolos & Tortas</a>
 								</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='pacote.html'>Galeria de Fotos</a> 
+							<a class="nav-link" href='home.html'>Galeria de Fotos</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='galeria.html'>Eventos</a> 
+							<a class="nav-link" href='home.html'>Eventos</a> 
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href='#sectionSobre'>Sobre</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='contato.html'>Contato</a>
+							<a class="nav-link" href='#sectionContato'>Contato</a>
 						</li>
 					</ul>
 				</div>
@@ -83,26 +83,47 @@
 		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
+	<div id="sectionMinidoces" class="container" style="padding-top:70px;padding-bottom:70px">
+		<h1>Minidoces</h1>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="sectionBrownie" class="container" style="padding-top:70px;padding-bottom:70px">
+		<h1>Brownie</h1>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="sectionBolo" class="container" style="padding-top:70px;padding-bottom:70px">
+		<h1>Bolo</h1>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+		<p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
 	<div id="sectionSobre" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-		<h1> Do encontro de dois amigos, uma ideia: Doces caseiros feitos com afeto! </h1>
-		<div class="row">
-			<div class="col-md-6 text-center">
+		<div class="row text-center p-2">
+			<div class="col-md-2"></div>
+			<div class="col-md-8">
+				<h1 class="text-white slogan-amigos rounded text-center bg-docedeleite brusher p-3 m-3"> Do encontro de dois amigos, uma ideia: <br> Doces caseiros feitos com afeto! </h1>
+			</div>
+			<div class="col-md-2"></div>
+		</div>
+		<div class="row text-center p-5">
+			<div class="col-md-6">
 				<figure class="figure">
 					<img src="imagens/luccasperfil.jpeg" class='foto_perfil img-fluid' alt='Foto do Luccas'>
-					<figcaption class="figure-caption">Luccas Trindade</figcaption>
+					<figcaption class="mt-3 p-3 slogan-amigos text-white figure-caption rounded text-center bg-docedeleite lobster"><h4>Luccas Trindade</h4></figcaption>
 				</figure>
 			</div>
-			<div class="col-md-6 text-center">
+			<div class="col-md-6">
 				<figure class="figure">
 					<img src="imagens/dinho_perfil.jpeg" class='foto_perfil img-fluid' alt='Foto do Dinho'>
-					<figcaption class="figure-caption">Edson Netto</figcaption>
+					<figcaption class="mt-3 p-3 slogan-amigos text-white figure-caption rounded text-center bg-docedeleite lobster"><h4>Edson Netto</h4></figcaption>
 				</figure>
 			</div>
 		</div>
 	</div>
 
 <!-- Footer -->
-<footer class="page-footer pt-4 bg-chocolate text-white">
+<footer id="sectionContato" class="page-footer pt-4 bg-chocolate text-white">
  <!-- Footer Links -->
     <div class="container text-center">
 	<!-- Footer links -->
