--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 				<h1 class="navbar-brand marca-colher brusher">colher de <br> doce deLeite </h1>
 				<!-- Toggler/collapsibe Button -->
 				<button class="navbar-toggler" id="btn-hamburguer" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-				<div class="hamburguer" onclick="myFunction(this)">
+				<div id="dsn-hamburguer" class="hamburguer" onclick="myFunction(this)">
 					<div class="bar1"></div>
 					<div class="bar2"></div>
 					<div class="bar3"></div>
@@ -25,27 +25,27 @@
 				<div class="collapse navbar-collapse justify-content-end align-self-end" id="collapsibleNavbar">
 					<ul class="navbar-nav menuPrincipal">
 						<li class="nav-item">
-							<a class="nav-link" href='home.html'>Início</a> 
+							<a class="acessoSecao nav-link" href='home.html'>Início</a> 
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#sectionProdutos" id="navbardrop" data-toggle="dropdown">Nossos Produtos</a>
 								<div class="dropdown-menu bg-docedeleite">
-									<a class="dropdown-item" href='#sectionMinidoces'>MiniDoces</a>
-									<a class="dropdown-item" href='#sectionBrownie'>Brownies</a>
-									<a class="dropdown-item" href='#sectionBolo'>Bolos & Tortas</a>
+									<a class="acessoSecao dropdown-item" href='#sectionMinidoces'>MiniDoces</a>
+									<a class="acessoSecao dropdown-item" href='#sectionBrownie'>Brownies</a>
+									<a class="acessoSecao dropdown-item" href='#sectionBolo'>Bolos & Tortas</a>
 								</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='home.html'>Galeria de Fotos</a> 
+							<a class="acessoSecao nav-link" href='home.html'>Galeria de Fotos</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='home.html'>Eventos</a> 
+							<a class="acessoSecao nav-link" href='home.html'>Eventos</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='#sectionSobre'>Sobre</a> 
+							<a class="acessoSecao nav-link" href='#sectionSobre'>Sobre</a> 
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href='#sectionContato'>Contato</a>
+							<a class="acessoSecao nav-link" href='#sectionContato'>Contato</a>
 						</li>
 					</ul>
 				</div>
